# zephyr

samples/application_development/external_lib/: CMakeLists.txt
samples/application_development/external_lib/mylib/: mylib.cmake
